--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "backed for bloglist app",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		// "test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest --verbose",
 		"dev": "nodemon index.js"
 	},
 	"author": "Yisaaaa",
@@ -19,6 +20,10 @@
 		"eslint": "^8.56.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-plugin-import": "^2.29.1",
+		"jest": "^29.7.0",
 		"nodemon": "^3.0.2"
+	},
+	"jest": {
+		"testEnvironment": "node"
 	}
 }
