--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"description": "backed for bloglist app",
 	"main": "index.js",
 	"scripts": {
-		// "test": "echo \"Error: no test specified\" && exit 1",
-		"test": "jest --verbose",
-		"dev": "nodemon index.js"
+		"start": "NODE_ENV=production node index.js",
+		"test": "NODE_ENV=test jest --verbose --runInBand",
+		"dev": "NODE_ENV=development nodemon index.js"
 	},
 	"author": "Yisaaaa",
 	"license": "MIT",
@@ -14,6 +14,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"express-async-errors": "^3.1.1",
 		"mongoose": "^8.0.3"
 	},
 	"devDependencies": {
@@ -21,9 +22,11 @@
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-plugin-import": "^2.29.1",
 		"jest": "^29.7.0",
-		"nodemon": "^3.0.2"
+		"nodemon": "^3.0.2",
+		"supertest": "^6.3.3"
 	},
 	"jest": {
-		"testEnvironment": "node"
+		"testEnvironment": "node",
+		"globalTeardown": "./tests/teardown.js"
 	}
 }
