--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"start": "NODE_ENV=production node index.js",
 		"test": "NODE_ENV=test jest --verbose --runInBand",
-		"dev": "NODE_ENV=development nodemon index.js"
+		"dev": "NODE_ENV=development nodemon index.js",
+		"start:test": "NODE_ENV=test node index.js"
 	},
 	"author": "Yisaaaa",
 	"license": "MIT",
